# MAI_OOP_3

./: CMakeLists.txt  README.md  main.cpp
lib/array/: array.cpp  array.hpp
lib/geometry/: figure.hpp
lib/geometry/figure/: figure.cpp  figure.hpp
lib/geometry/figures/: hexagon.cpp  hexagon.hpp  octagon.cpp  octagon.hpp  pentagon.cpp  pentagon.hpp
lib/geometry/point/: point.cpp  point.hpp
tests/: tests.cpp
